# ai-notepad

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: capture_template.py  generate_screenshots.py  test_grounding.py
src/: main.py
src/api/: posts.py
src/automation/: mouse.py  notepad.py  screen.py
src/grounding/: annotator.py  defaults.py  screenseeker.py  template_match.py
src/utils/: logger.py
