[project]
name = "ai-notepad"
version = "0.1.0"
description = "Vision-based desktop automation with dynamic icon grounding using ScreenSeekeR-inspired cascaded VLM search"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyautogui>=0.9.54",
    "mss>=9.0.2",
    "Pillow>=10.4.0",
    "requests>=2.32.3",
    "google-genai>=1.0.0",
    "python-dotenv>=1.0.1",
    "pygetwindow>=0.0.9",
]

[project.scripts]
ai-notepad = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pyinstaller>=6.10.0",
]
